- added solution - added connection context for SQLite EF Core

--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "apiContext": "Data Source=apiContext-cbed10e6-b101-42fc-b236-af5c251c6b4f.db"
+  }
 }
