Add idenity core and required DB migration

--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -6,6 +6,11 @@
     }
   },
   "AllowedHosts": "*",
+  "JWT": {
+    "Audience": "http://localhost:5246",
+    "Issuer": "http://localhost:5246",
+    "Key": "somekeythatneedstobechanged"
+  },
   "ConnectionStrings": {
     "apiContext": "Data Source=apiContext-cbed10e6-b101-42fc-b236-af5c251c6b4f.db"
   }
